resolved git hash comment

--- a/wireNilChecker.env
+++ b/wireNilChecker.env
@@ -39,4 +39,5 @@ TEST_BRANCH=
 LATEST_HASH=
 GOPATH=/usr/local/go
 PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin
+GIT_HASH=d6e81951979389b3b6f1db4ffb56fbb87b650834
 
