--- a/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
+++ b/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
@@ -1217,7 +1217,7 @@ components:
                 yetToTrigger:
                   type: integer
                   description: Deployments not yet triggered.
-                ongoing:
+                onGoing:
                   type: integer
                   description: Deployments in progress.
                 failed:
