--- a/tests/integrationTesting/migrator.yaml
+++ b/tests/integrationTesting/migrator.yaml
@@ -27,7 +27,7 @@ spec:
             - name: MIGRATE_TO_VERSION
               value: "0"
             - name: SCRIPT_MOUNTED
-              value: true
+              value: "true"
           envFrom:
             - secretRef:
                 name: postgresql-migrator
