--- a/tests/integrationTesting/migrator.yaml
+++ b/tests/integrationTesting/migrator.yaml
@@ -42,6 +42,7 @@ spec:
         - name: sql-scripts-volume
           hostPath:
             path: /test/scripts/sql/
+            type: DirectoryOrCreate
   backoffLimit: 20
   activeDeadlineSeconds: 150000
 ---
