--- a/tests/integrationTesting/migrator.yaml
+++ b/tests/integrationTesting/migrator.yaml
@@ -7,14 +7,11 @@ spec:
     spec:
       containers:
         - name: postgresql-migrate-devtron
-          image: quay.io/devtron/migrator:71748de9-149-11112
+          image: laeeqa222/abcd:96531e29-12-4216
+          volumeMounts:
+            - mountPath: /tmp/app/
+              name: sql-scripts-volume
           env:
-            - name: GIT_BRANCH
-              value: main
-            - name: SCRIPT_LOCATION
-              value: scripts/sql/
-            - name: GIT_REPO_URL
-              value: https://github.com/devtron-labs/devtron-enterprise.git
             - name: DB_TYPE
               value: postgres
             - name: DB_USER_NAME
@@ -27,12 +24,17 @@ spec:
               value: orchestrator
             - name: MIGRATE_TO_VERSION
               value: "0"
+            - name: SCRIPT_MOUNTED
+              value: "true"
           envFrom:
             - secretRef:
                 name: postgresql-migrator
-            - configMapRef:
-                name: git-hash-cm
       restartPolicy: OnFailure
+      volumes:
+        - name: sql-scripts-volume
+          hostPath:
+            path: /tmp/scripts/
+            type: DirectoryOrCreate
   backoffLimit: 20
   activeDeadlineSeconds: 1500
 ---
