--- a/tests/integrationTesting/migrator.yaml
+++ b/tests/integrationTesting/migrator.yaml
@@ -7,14 +7,11 @@ spec:
     spec:
       containers:
         - name: postgresql-migrate-devtron
-          image: quay.io/devtron/migrator:71748de9-149-11112
+          image: quay.io/devtron/migrator:e026843e-866-11925
+          volumeMounts:
+            - mountPath: /tmp/app/
+              name: sql-scripts-volume
           env:
-            - name: GIT_BRANCH
-              value: main
-            - name: SCRIPT_LOCATION
-              value: scripts/sql/
-            - name: GIT_REPO_URL
-              value: https://github.com/devtron-labs/devtron.git
             - name: DB_TYPE
               value: postgres
             - name: DB_USER_NAME
@@ -27,12 +24,17 @@ spec:
               value: orchestrator
             - name: MIGRATE_TO_VERSION
               value: "0"
-            - name: GIT_HASH
-              value: be7da471e45a501eba19eaa5f8d08dfe5601598d
+            - name: SCRIPT_MOUNTED
+              value: "true"
           envFrom:
             - secretRef:
                 name: postgresql-migrator
       restartPolicy: OnFailure
+      volumes:
+        - name: sql-scripts-volume
+          hostPath:
+            path: /tmp/scripts/
+            type: DirectoryOrCreate
   backoffLimit: 20
   activeDeadlineSeconds: 1500
 ---
@@ -45,7 +47,7 @@ spec:
     spec:
       containers:
         - name: postgresql-migrate-casbin
-          image: quay.io/devtron/migrator:71748de9-149-11112
+          image: quay.io/devtron/migrator:e026843e-866-11925
           env:
             - name: SCRIPT_LOCATION
               value: scripts/casbin/
@@ -83,7 +85,7 @@ spec:
     spec:
       containers:
         - name: postgresql-migrate-gitsensor
-          image: quay.io/devtron/migrator:71748de9-149-11112
+          image: quay.io/devtron/migrator:e026843e-866-11925
           env:
             - name: SCRIPT_LOCATION
               value: scripts/sql/
@@ -121,7 +123,7 @@ spec:
     spec:
       containers:
         - name: postgresql-migrate-lens
-          image: quay.io/devtron/migrator:71748de9-149-11112
+          image: quay.io/devtron/migrator:e026843e-866-11925
           env:
             - name: SCRIPT_LOCATION
               value: scripts/sql/
