--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -76,5 +76,4 @@ redirects:
     user-guide/use-cases/untitled-3: user-guide/use-cases/connect-django-with-mysql-database.md
     global-configurations/api-token: user-guide/global-configurations/authorization/api-tokens.md
     user-guide/creating-application/workflow/ci-pipeline2: user-guide/creating-application/workflow/ci-pipeline.md
-    usage/clusters: usage/resource-browser
-
+    user-guide/clusters: user-guide/resource-browser.md
