--- a/charts/devtron/templates/gitsensor.yaml
+++ b/charts/devtron/templates/gitsensor.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     app: git-sensor
     release: devtron
+type: Opaque
 {{- if .secrets }}
 data:
 {{- range $k, $v := .secrets }}
